src/objects/Reporting_Month__c.object
<CustomObject>
    <fields>
        <fullName>Dealer_Forecast_Total__c</fullName>
        <label>Dealer Forecast Total</label>
        <summarizedField>Forecast__c.Dealer_Forecast__c</summarizedField>
        <summaryForeignKey>Forecast__c.Report_Month__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Dealer_Gap__c</fullName>
        <formula>Dealer_Target_Total__c -  Dealer_Forecast_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dealer Gap</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dealer_Target_Total__c</fullName>
        <label>Dealer Target Total</label>
        <summarizedField>Targets__c.Dealer_Target__c</summarizedField>
        <summaryForeignKey>Targets__c.Report_Month__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Reporting Month</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Reporting Month Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reporting Months</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>